# side-job-analysis

./: README.md  proposal.md  pyproject.toml  run_month.py
config/: features.yaml  output.yaml  ranking.yaml  score.yaml
data/: candidate_locations.csv
data/raw/: existing_stores.csv  station.csv  stations.csv
reports/: sample_report.md
src/: 01_load_data.py  02_preprocess.py  03_score_calculation.py  04_validation.py  05_visualization.py  06_export.py  distance.py  main.py  scoring.py
src/analysis/: ranking.py
