[project]
name = "side-job"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datetime>=6.0",
    "geopy>=2.4.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
]
